
[package]
authors = ["Paul Gilbert"]
categories = ["embedded", "no-std"]
description = "module with 8 NTC temperature, 4 AHT10 temperature-humidity sensors, and MCU stm32f401"
keywords = ["stm32f401", "i2c", "spi", "adc"]
license = "MIT OR Apache-2.0"
name = "t16-f401"
version = "0.0.1"
edition = "2021"


[dependencies]
                                          
stm32f4xx-hal =  { version = "0.20.0", optional = true }

embedded-hal        = "1.0"
embedded-hal-bus    = "0.2.0"
embedded-hal-async  = "1.0.0"

nb = ">=1.1.0"
libm = "0.2"
cortex-m = ">=0.7"
cortex-m-rt = ">=0.7.0"

panic-semihosting    = { version = ">=0.5.2" }
panic-halt           = { version = ">=0.2.0" }

heapless = "0.7"
embedded-graphics = ">=0.7"

# This radio-sx127 re-exports {Receive, Transmit} so insures correct radio version.
radio-sx127x  = {  git = "https://github.com/pdgilbert/rust-radio-sx127x", default-features = false, branch = "ehal-1" }

#ssd1306         = { git = "https://github.com/sjoerdsimons/ssd1306", branch = "master"  } # embedded-hal-1.0.0
ssd1306         = { version = "0.9.0" } 

ads1x1x         = { git = "https://github.com/eldruin/ads1x1x-rs" }
#ads1x1x         = { version = "0.2.2" }   trait bound problems

[features]
stm32f4xx = ["stm32f4xx-hal"] 
stm32f401 = ["stm32f4xx-hal/stm32f401"  ] 
